deadlines and extensions added to articles

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -127,7 +127,7 @@ br {
   bottom:0px;
   right:0px;
   background-color: #085F63 !important;
-  border-color: #F0255E;
+  border-color: #085F63;
   font-weight: 800;
   float: right;
   font-family: verdana;
