--- a/app/views/application_mailer/article_deadline_warning.html.erb
+++ b/app/views/application_mailer/article_deadline_warning.html.erb
@@ -10,12 +10,12 @@
     <p>Hi <%= @user.first_name %>,</p>
       <% if @posts.count.eql? 1 %>
         <p>
-          This is an email notifying you that your draft <%= link_to(@posts.last.title, @posts.last) %> is due in <%= distance_of_time_in_words(Time.now, @posts.last.deadline_at) %>.
-          If you need more time on this pitch, you can use an extension. Find out more about deadlines and extensions <a href="#">here</a>.
+          This is an automated email notifying you that your draft <%= link_to(@posts.last.title, @posts.last) %> is due in <%= distance_of_time_in_words(Time.now, @posts.last.deadline_at) %>.
+          If you need more time on this pitch, you can use an extension. Find out more about deadlines and extensions <a href="https://www.theteenmagazine.com/writing-the-perfect-article#deadlines-and-extensions">here</a>.
         </p>
         <% else %>
         <p>
-          This is an email notifying you that you have <%= @posts.count %> drafts that are due soon:
+          This is an automated email notifying you that you have <%= @posts.count %> drafts that are due soon:
         </p>
         <ol>
           <% @posts.each do |post| %>
@@ -23,7 +23,7 @@
           <% end %>
         </ol>
         <p>
-          If you need more time on this pitch, you can use an extension. Find out more about deadlines and extensions <a href="#">here</a>.
+          If you need more time on this pitch, you can use an extension. Find out more about deadlines and extensions <a href="https://www.theteenmagazine.com/writing-the-perfect-article#deadlines-and-extensions">here</a>.
         </p>
       <% end %>
     <p>Best,<br/>
