--- a/app/views/pitches/_preview_pitch.html.erb
+++ b/app/views/pitches/_preview_pitch.html.erb
@@ -24,7 +24,7 @@
               <%= markdown pitch.requirements %>
             <% end %>
             <% if @pitch.weeks_given.present? %>
-              <p class="pitch_usr"><b>This pitch has a <%= @pitch.weeks_given %> week deadline. Read more about deadlines <a href="#">here</a>.</b></p>
+              <p class="pitch_usr"><b>This pitch has a <%= @pitch.weeks_given %> week deadline. Read more about deadlines <a target="_blank" href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.</b></p>
             <% end %>
           </div>
           <div class="flex_child">
