--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -216,5 +216,6 @@
 <style>
   #cke_1_top .cke_button_icon {
     background-image: url('<%= request.base_url %>/assets/ckeditor/skins/moono-lisa/icons_hidpi.png') !important;
+    background-size: 16px !important;
   }
 </style>
