--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -29,11 +29,11 @@
       <%= image_tag(@pitch.thumbnail.url(:card), class: "thumbnail_img") %>
     <% end %>
 
-    <% if current_user.editor? %>
-      <div class="margin_flds">
-        <%= f.select(:weeks_given, options_for_select(["2 weeks", "4 weeks"], [2, 4]), {prompt: "Select a Deadline"}) %>
-      </div>
-    <% end %>
+    <div class="margin_flds">
+      <% @prompt = current_user.editor? ? "Select a Deadline" : "Set a deadline (Optional)" %>
+      <%= f.select(:weeks_given, options_for_select(["2 weeks", "4 weeks"], [2, 4]), {prompt: @prompt}, {:class => "d-inline"}) %>
+      <a data-toggle="tooltip" title="Read about deadlines" class="ml-1" target="_blank" href="/writing-the-perfect-article#deadlines-and-extensions"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="info-circle" class="mb-1 svg-inline--fa fa-info-circle fa-w-16" role="img" viewBox="0 0 512 512"><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119.08 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 110a42 42 0 1 1-42 42 42 42 0 0 1 42-42zm56 254a12 12 0 0 1-12 12h-88a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h12v-64h-12a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h64a12 12 0 0 1 12 12v100h12a12 12 0 0 1 12 12z" opacity="0.4"></path><path class="fa-primary" fill="currentColor" d="M256 202a42 42 0 1 0-42-42 42 42 0 0 0 42 42zm44 134h-12V236a12 12 0 0 0-12-12h-64a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h12v64h-12a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h88a12 12 0 0 0 12-12v-24a12 12 0 0 0-12-12z"></path></g></svg></a>
+    </div>
 
     <div class="margin_flds">
       <p>Upload a <a target="_blank" href="/choosing-a-topic#thumbnail-requirements">royalty free and eye catching</a> thumbnail image:</p>
@@ -44,7 +44,7 @@
       <p class="mb-0">Note: If this pitch does not fit The Teen Magazine's audience as described in <a target="_blank" href="/pitching-new-articles">Pitching New Articles</a>, an admin reserves the right to delete the pitch from Editor Pitches within 48 hours of it being created. Deleted pitches will not be counted toward your 10 required pitches every month.</p>
     <% end %>
 
-    <% if @pitch.slug.nil? && !(@pitch.user.try(:editor) || current_user.editor) %>
+    <% if @pitch.status.nil? && !(@pitch.user.try(:editor) || current_user.editor) %>
       <%= f.hidden_field :status, value: "Ready for Review" %>
       <% @button_text = "Submit Pitch" %>
     <% elsif @pitch.slug.nil? %>
