--- a/app/views/users/partials/_dashboard_articles.html.erb
+++ b/app/views/users/partials/_dashboard_articles.html.erb
@@ -6,11 +6,11 @@
         <h6 id="post-title"><a href="#"><%= link_to post.title, post%></a></h6>
         <p class="edited_dt"><%= "Last edited " + time_ago_in_words(post.updated_at) + " ago" %></p>
         <% if post.pitch.try(:claimed_id).present? && post.try(:deadline_at).present? && (post.reviews.last.status.eql? "In Progress") %>
-          <% @class = post.deadline_at < Date.today + 7.days ? "text-danger" : "" %>
+          <% @class = post.deadline_at < Date.today + 4.days ? "text-danger" : "" %>
           <p class="<%= @class %>">
             <% if post.deadline_at > Time.now %>
               You have <%= distance_of_time_in_words(Time.now, post.deadline_at) %> left to submit this article for review
-              <% if @class.present? %> or <a target="_blank" href="#" class="alert-link">use an extention</a>.<% end %>
+              <% if @class.present? %> or <a href="/writers/<%= post.user.slug %>/extensions" class="alert-link">use an extension</a>.<% end %>
             <% else %>
               You have passed the deadline. This article's pitch will be automatically unclaimed.
             <% end %>
