Editor pitch was claimed activity

--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -6,7 +6,7 @@
   <h3 class="pitch_ttl"><%= @title %> <i><%= @pitch.title %></i></h3>
   <p class="pitch_usr">Pitched by <%= link_to(@pitch.user.try(:full_name), @pitch.user, class: "pitch_btn") %> under <%= link_to(@pitch.category.name, @pitch.category, class: "pitch_btn") %></p>
   <% if @claimed_user.present? %>
-    <p class="pitch_usr">Claimed by <%= link_to(@claimed_user.full_name, @claimed_user, class: "pitch_btn") %> on <%= @article.try(:created_at)&.strftime('%A, %B %d') %></p>
+    <p class="pitch_usr">Claimed by <%= link_to(@claimed_user.full_name, @claimed_user, class: "pitch_btn") %><%= " on #{@pitch.claimed_at.strftime('%A, %B %d')}" unless @pitch.claimed_at.nil? %></p>
   <% elsif @pitch.status.eql? "Approved" %>
     <p class="mb-3" style="background-color: #FCD04D; display: inline-block;">This pitch was approved<% if @pitch.editor_id.present?%> by <%= link_to(@editor.try(:full_name), @editor) %><% end %>! You may claim it to start your draft.</p>
   <% elsif @pitch.status.eql? "Rejected" %>
