--- a/app/views/reviews/_post_reviews.html.erb
+++ b/app/views/reviews/_post_reviews.html.erb
@@ -1,6 +1,6 @@
 <div class="skinny_wrapper wrapper_padding pitches_wrapper reviews_wrapper">
   <h3 class="pitch_ttl">Editor Feedback for <%= link_to(@post.title, @post) %></h3>
-  <% @reviews = @post.reviews.where(status: "Rejected").order("created_at desc") %>
+  <% @reviews = @post.reviews.where(status: ["Rejected", "Approved for Publishing"]).order("created_at desc") %>
   <% @reviews.each_with_index do |review, index| %>
   <% if !(review.notes.blank?) %>
    <p><i style="background-color: #FCD04D;">Editor Notes: <%= review.notes %></p>
@@ -9,18 +9,22 @@
       <div class="card-header">
         <% @editor = User.where(id: review.editor_id).first %>
         Review #<%= @reviews.count - (index) %> given by <%= link_to(@editor.try(:full_name), @editor, :class => "link_nrml", :target => "_blank") %> on <%= review.updated_at.strftime("%D") %>
-        <% if current_user.editor? %>
+        <% if current_user.editor? && (review.status.eql? "Rejected") %>
           <%= link_to review_path(review), method: :delete, :data => {confirm: "Are you sure you want to delete this review?"} do %>
             <svg style="color: black;" width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" class="svg-inline--fa fa-times fa-w-11" role="img" viewBox="0 0 352 512"><path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"></path></svg>
           <% end %>
         <% end %>
       </div>
       <div class="card-body">
-        <% @requested_changes = review.try(:feedback_givens) %>
-        <% @requested_changes.each do |requested_change| %>
-          <% @feedback = Feedback.find(requested_change.feedback_id) %>
-          <h5 class="card-title">✎ <%= @feedback.try(:editor_descr) %></h5>
-          <p class="card-text"><%= markdown @feedback.try(:review_descr) %></p>
+        <% if review.status.eql? "Rejected" %>
+          <% @requested_changes = review.try(:feedback_givens) %>
+          <% @requested_changes.each do |requested_change| %>
+            <% @feedback = Feedback.find(requested_change.feedback_id) %>
+            <h5 class="card-title">✎ <%= @feedback.try(:editor_descr) %></h5>
+            <p class="card-text"><%= markdown @feedback.try(:review_descr) %></p>
+          <% end %>
+        <% else %>
+          <h5 class="card-title">✎ Approved for Publishing</h5>
         <% end %>
       </div>
      </div>
