--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -39,8 +39,8 @@
     <%= markdown @pitch.requirements %>
   <% end %>
 
-  <% if @pitch.weeks_given.present? %>
-    <p class="pitch_usr"><b>This pitch has a <%= @pitch.weeks_given %> week deadline. Read more about deadlines <a href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.</b></p>
+  <% if @pitch.deadline.present? %>
+    <p class="pitch_usr"><b>This pitch has a <%= @pitch.deadline %> week deadline. Read more about deadlines <a href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.</b></p>
   <% end %>
 
   <% if @claimed_user.nil? %>
@@ -51,7 +51,7 @@
       <%= f.hidden_field :pitch_id, value: @pitch.id %>
       <i class="d-block pb-4 mb-2">When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. Only claim pitches you intend to write. If you change your mind later, you can unclaim the pitch.</i>
       <div class="btn_cntnr" style="margin-top: -1rem;">
-        <% @confirm = @pitch.weeks_given.nil? ? "When you claim this pitch, your draft will be started." : "When you claim this pitch, you will have #{@pitch.weeks_given} weeks to submit the associated draft for review." %>
+        <% @confirm = @pitch.deadline.nil? ? "When you claim this pitch, your draft will be started." : "When you claim this pitch, you will have #{@pitch.deadline} weeks to submit the associated draft for review." %>
         <span data-toggle="tooltip" title="<%= @tooltip %>"><%= f.submit "Claim Article Pitch", data: { confirm: @confirm }, class: "newpost--new--profile mb-0 mr-0 #{@disabled}", style: "padding-left: 2.5em; padding-right: 2.5em;" %></span>
       </div>
       <br>
