--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer class="page-footer font-small pt-4">
   <!-- Footer Links -->
-  <div class="wrapper_home text-center text-md-left" style="margin-bottom: 0;">
+  <div class="wrapper_home text-center text-md-left pb-3" style="margin-bottom: 0;">
     <!-- Grid row -->
       <!-- Content -->
     <div class="title-footer">
@@ -30,9 +30,6 @@
           <li>
             <a href="/search?utf8=✓&filter=writers">Search in Writers</a>
           </li>
-          <li>
-            <a href="/login">Log in</a>
-          </li>
         </ul>
       </div>
       <!-- Grid column -->
@@ -41,7 +38,7 @@
         <!-- Links -->
         <h6 class="font-weight-bold text-uppercase">Quick Links</h6>
         <ul class="list-unstyled">
-          <li><%= link_to "My Profile", get_profile_path %></li>
+          <li><%= link_to "Log in", get_profile_path %></li>
           <li><a href="/community">Community</a></li>
           <li><a href="/categories/student-life">Student Life</a></li>
           <li><a href="/categories/wellness">Wellness</a></li>
@@ -75,7 +72,6 @@
     <div class="py-3">
       <span><i>© 2020 TheTeenMagazine.com</i></span>
     </div>
-    <br>
   </div>
   <!-- Footer Links -->
   <!-- Copyright -->
