--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -27,7 +27,7 @@
       <a class="link" href="/categories/lifestyle">Lifestyle</a>
       <a class="link" href="/categories/op-ed">Op-Ed</a>
       <a class="link" href="/apply">Apply</a>
-      <%= link_to "My Profile", get_profile_path, class: "link" %>
+      <%= link_to "Log in", get_profile_path, class: "link" %>
     </nav>
   </div>
 </header>
