--- a/app/views/layouts/partials/_slide-in-menu.html.erb
+++ b/app/views/layouts/partials/_slide-in-menu.html.erb
@@ -12,5 +12,5 @@
   <a href="/categories/lifestyle">Lifestyle</a>
   <a href="/categories/op-ed">Op-Ed</a>
   <a href="/apply">Apply</a>
-  <%= link_to "My Profile", get_profile_path %>
+  <%= link_to "Log in", get_profile_path %>
 </div>
