--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -131,7 +131,7 @@
               <% end %>
             </ul>
           </div>
-          <i class="mt-4 d-block">See more pitches <%= link_to("here", pitches_path, class: "link_inline") %></i>
+          <i class="mt-4 d-block">See more pitches <%= link_to("here", pitches_path, class: "link_inline link_grn") %></i>
           <br>
         </div>
         <div class="links"
@@ -140,8 +140,8 @@
           <% end %>
         >
           <div>
-            <%= link_to("Interview Application", "https://forms.gle/eQyETofL6M1bxvqy5", target: "_blank") %><br>
-            <%= link_to("Editor Application", "/applications/editor") %><br>
+            <%= link_to("Interview Application", "https://forms.gle/eQyETofL6M1bxvqy5", target: "_blank", class: "link_grn") %><br>
+            <%= link_to("Editor Application", "/applications/editor", class: "link_grn") %><br>
           </div>
         </div>
         <br>
