--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,44 +27,6 @@
       <div class="toggle-nav" onclick="toggleNav();" id="navigation_overlay"></div>
       <%= render "layouts/partials/footer" %>
     </div>
-    <script type="text/javascript">
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-89987071-1', 'auto');
-      ga('send', 'pageview');
-      $.fn.isOnScreen = function(){
-        var win = $(window);
-        var viewport = {
-            top : win.scrollTop(),
-            left : win.scrollLeft()
-        };
-        viewport.right = viewport.left + win.width();
-        viewport.bottom = viewport.top + win.height();
-        var bounds = this.offset();
-        bounds.right = bounds.left + this.outerWidth();
-        bounds.bottom = bounds.top + this.outerHeight();
-        return (!(viewport.right < bounds.left || viewport.left > bounds.right || viewport.bottom < bounds.top || viewport.top > bounds.bottom));
-      };
-      $('document').ready(function() {
-        $('a[href^="https://"]').not('a[href*=theteenmagazine]').attr('target','_blank');
-        $('a[href^="http://"]').not('a[href*=theteenmagazine]').attr('target','_blank');
-        setTimeout(function() {
-          $('.notice').slideUp();
-        }, 1500);
-        $("#submit-comment-modal-button").click(function() {
-          $("#submit-comment-modal-button").addClass("disabled");
-          $(".spinner-button").removeClass("hide");
-        });
-      });
-      $(window).on('scroll',function(){
-        if ($('.header-navigation').isOnScreen()) {
-          $(".header-mobile").removeClass("header-mobile-show");
-        } else {
-          $(".header-mobile").addClass("header-mobile-show");
-        }
-      });
-    </script>
+    <%= javascript_include_tag 'layout'%>
   </body>
 </html>
