--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -12,7 +12,6 @@
     </script>
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'writer' %>
-    <%= javascript_include_tag 'ckeditor/ckeditor' %>
     <% if current_user.partner %>
       <meta name="partner" content="Turn off ads">
     <% end %>
@@ -77,7 +76,9 @@
                                 data-step data-index="3" data-onboarding-content="New options have been added. Navigate to your editor dashboard here."
                               <% end %>
                             >
-                              <svg width="20px" height="20px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
+                              <svg width="20px" height="20px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" viewBox="0 0 448 512">
+                                <path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path>
+                              </svg>
                               <%= @profile_img %>
                               <% if !(@notifications.eql? 0) %>
                                 <span class="counter counter-sm" <% if @notifications < 10 %> style="padding: 2px 5px !important;" <% end %>><%= @notifications %></span>
@@ -99,51 +100,7 @@
         <%= render "layouts/partials/footer" %>
       </div>
     </section>
-
-    <script type="text/javascript">
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-89987071-1', 'auto');
-      ga('send', 'pageview');
-      $.fn.isOnScreen = function(){
-        var win = $(window);
-        var viewport = {
-            top : win.scrollTop(),
-            left : win.scrollLeft()
-        };
-        viewport.right = viewport.left + win.width();
-        viewport.bottom = viewport.top + win.height();
-        var bounds = this.offset();
-        bounds.right = bounds.left + this.outerWidth();
-        bounds.bottom = bounds.top + this.outerHeight();
-        return (!(viewport.right < bounds.left || viewport.left > bounds.right || viewport.bottom < bounds.top || viewport.top > bounds.bottom));
-      };
-      $.fn.triggerCheck = function(){
-        if ($('.checkmark').isOnScreen()) {
-          $('.checkmark').addClass("checkmark");
-          $('.checkmark path').addClass("checkmark__check");
-          $('.checkmark circle').addClass("checkmark__circle");
-        }
-      };
-      $('document').ready(function() {
-        $('[data-toggle="tooltip"]').tooltip();
-        setTimeout(function() {
-          $('.notice').slideUp();
-        }, 1500);
-        $("#submit-comment-modal-button").click(function() {
-          $("#submit-comment-modal-button").addClass("disabled");
-          $(".spinner-button").removeClass("hide");
-        });
-      });
-      $(window).on('scroll',function(){
-        if ($('.header-navigation').isOnScreen()) {
-          $(".header-mobile").removeClass("header-mobile-show");
-        } else {
-          $(".header-mobile").addClass("header-mobile-show");
-        }
-      });
-    </script>
+    <%= javascript_include_tag 'ckeditor/ckeditor' %>
+    <%= javascript_include_tag 'layout'%>
   </body>
 </html>
