--- a/app/views/posts/partials/_sharing_on.html.erb
+++ b/app/views/posts/partials/_sharing_on.html.erb
@@ -6,7 +6,7 @@
   <%= render :partial => 'comments/comment_form', locals: {post: post, comment: comment } %>
   <ul class="list-group list-group-flush" id="list-group-comments">
     <% if (comments.count.eql? 0) && (post.reviews.last.try(:status).eql? "In Progress") %>
-      <i class="mt-2">Social sharing is turned on! Your article is now viewable in the <%= link_to("writer community", "/community") %>.</i>
+      <i class="mt-2">Social sharing is turned on! Your article is now viewable in the <%= link_to("writer community", "/community", class: "link_grn") %>.</i>
     <% else %>
       <% comments.each do |comment| %>
         <%= render :partial => 'comments/comment', locals: {comment: comment, post: post} %>
