--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -75,11 +75,11 @@
   <h1 class="title">This article has already been published and can only be edited by the author(s) and admins.</h1>
 <% end %>
 
+<%= javascript_include_tag 'ckeditor/ckeditor' %>
 <script type="text/javascript" src="https://svc.webspellchecker.net/spellcheck31/wscbundle/wscbundle.js"></script>
 <script type="text/javascript">
   $('document').ready(function(){
     var unsaved = false;
-
     $("#edit_post").on("submit", function(event){
       unsaved = false;
       var reply = true;
