--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -84,7 +84,7 @@
     <div class="tab-pane fade" id="conversations-classic" role="tabpanel" aria-labelledby="conversations-tab-classic">
       <%= render_async_cache get_conversations_following_path, toggle: { selector: '#conversations-tab-classic', event: :click } do %>
         <div class="d-flex justify-content-center">
-          <div class="spinner-border" role="status">
+          <div class="spinner-border mb-4" role="status">
             <span class="sr-only">Loading...</span>
           </div>
         </div>
