added placeholders for render async

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -547,6 +547,15 @@ hr {
   visibility: visible !important;
 }
 
+.ctgry_article_placeholder {
+  width: 31%;
+  background-color: whitesmoke;
+  overflow: hidden;
+  height: 0;
+  padding-top: 19.5%;
+  margin-bottom: 200px;
+}
+
 .parentflex {
   .featured_img {
     margin-bottom: 10px;
