--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -272,7 +272,7 @@
   }
   .ctgry_section {
     flex-direction: column !important;
-    .ctgry_article {
+    .ctgry_article, .ctgry_article_placeholder {
       width: 100% !important;
     }
   }
