--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -52,9 +52,11 @@ blockquote {
               <% end %>
             </div>
             <div class="right_side_wrapper <% if @authors.count == 1 %>right_side_flex<% end %>">
-              <div class="date_wrapper draft">
+              <div class="date_wrapper draft date_wrapper_draft">
                 <p>
-                  <svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="far" data-icon="clock" class="mr-1 mb-1 svg-inline--fa fa-clock fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"></path></svg>
+                  <svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="far" data-icon="clock" class="mr-1 mb-1 svg-inline--fa fa-clock fa-w-16" role="img" viewBox="0 0 512 512">
+                    <path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"></path>
+                  </svg>
                 </p>
                 <p class="date"><%= @date.strftime('%A, %B %d')%></p>
               </div>
