--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,56 +1,24 @@
 <div class="body welcome">
   <div class="gray--background">
     <div class="home--main">
-      <div class="parentflex">
-        <div class="flexbox">
-          <div class="featured divfeatured">
-            <div class="featured individual">
-              <div class="featured_img">
-                <%=link_to(image_tag(@posts_approved_0[0].thumbnail.url(:large2), alt: @posts_approved_0[0].title), @posts_approved_0[0] )%>
-              </div>
-              <h3 class="article_title"><%= link_to @posts_approved_0[0].title, @posts_approved_0[0] %></h3>
-              <p class="date"><%= @posts_approved_0[0].publish_at.strftime("%A, %b %d")%>, Featured article</p>
-            </div>
-          </div>
-          <div class="articles2-6">
-            <% @posts_approved_0[1..4].each do |post| %>
-              <div class="thumbnail">
-                <%=link_to(image_tag(post.thumbnail.url(:medium), alt: post.title, :class => "image_thumbnail"), post )%>
-                <div class="thumbnail--container">
-                  <h3 class="article_title"><%= link_to post.title.truncate_words(14), post %></h3>
-                  <p class="date"><%= post.publish_at.strftime("%A, %b %d")%></p>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        </div>
-        <div class="ads_wrapper ads_responsive">
-          <div id="ezoic-pub-ad-placeholder-116">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- Homepage 1 -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-4566416931763342"
-                 data-ad-slot="2546543885"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-          </div>
-        </div>
-      </div>
+      <%= render "welcome/partials/hero" %>
     </div>
   </div>
   <div class="wrapper_home">
   <h1 class="section--title"><a href="/categories/student-life">Student Life</a></h1>
   <div class="flex--welcome">
     <div class="flex-1">
-      <%= render "welcome/categories/category_1", posts: @posts_approved_1 %>
+      <%= render_async get_category_1_welcome_path, retry_count: 3 do %>
+        <%= render "welcome/placeholders/category_row_placeholder" %>
+      <% end %>
       <h1 class="section--title"><a href="/categories/opinion">Op-ed</a></h1>
-      <%= render_async get_category_2_welcome_path %>
+      <%= render_async get_category_2_welcome_path, retry_count: 3 do %>
+        <%= render "welcome/placeholders/category_row_placeholder" %>
+      <% end %>
       <h1 class="section--title"><a href="/categories/culture">Culture</a></h1>
-      <%= render_async get_category_3_welcome_path %>
+      <%= render_async get_category_3_welcome_path, retry_count: 3 do %>
+        <%= render "welcome/placeholders/category_row_placeholder" %>
+      <% end %>
     </div>
     <div class="most_read contain_articles">
       <div class="ads_wrapper">
@@ -69,7 +37,7 @@
         </div>
       </div>
       <h1 class="section--title">Trending Articles</h1>
-      <%= render_async get_trending_posts_path %>
+      <%= render_async get_trending_posts_path, retry_count: 3 %>
     </div>
   </div>
   <h1 class="section--title"><a href="/categories/lifestyle">Lifestyle</a></h1>
@@ -97,5 +65,5 @@
     </div>
   </div>
   <h1 class="section--title mb-0"><a href="/search">Recent Articles</a></h1>
-  <%= render_async get_recent_posts_path %>
+  <%= render_async get_recent_posts_path, retry_count: 3 %>
 </div>
